cabal-version:      2.4
name:               psb
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/katsujukou/psb.git

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Katsujukou Kineya
maintainer:         katsujukou@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common shared-properties
  default-language:   Haskell2010
  build-depends:
    , base                  ^>=4.16.2.0
    , bytestring
    , containers
    , directory
    , filepath
    , lens                  ^>=5.1.1
    , mtl
    , optparse-applicative
    , process
    , purescript            ==0.15.4
    , random
    , serialise
    , text
    , time
    , transformers

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists -Wpartial-fields
    -Wredundant-constraints -ferror-spans -fprint-expanded-synonyms
    -fprint-explicit-foralls -fwarn-tabs
    -optP-Wno-nonportable-include-path

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MonoLocalBinds
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NegativeLiterals
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeSynonymInstances
    OverloadedRecordDot

executable psb
  import:         shared-properties
  main-is:        Psb.hs
  hs-source-dirs: app
  build-depends:  psb
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -main-is Psb
  other-modules:  Paths_psb

-- test-suite psb-test
--   import:             shared-properties
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     test
--   main-is:            Spec.hs

--   -- cabal-fmt: expand test -Spec
--   build-depends:
--     , hspec
--     , pursley

--   build-tool-depends: hspec-discover:hspec-discover -any
--   ghc-options:        -threaded -rtsopts -with-rtsopts=-N

library
  import:          shared-properties
  hs-source-dirs:  src
  other-modules:   Paths_psb

  -- cabal-fmt: expand src
  exposed-modules:
    Pursley.Psb
    Pursley.Psb.Depfile
    Pursley.Psb.Error
    Pursley.Psb.IO
    Pursley.Psb.Options
    Pursley.Psb.Version
